--- a/views/changepassword.ejs
+++ b/views/changepassword.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Dashboard</title>
+    <title>CQ</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -85,7 +85,7 @@
             margin-left: 30%;
             min-height: 320px;
             height: auto;
-            max-width: 40%;
+            max-width: 30%;
             width: auto;
             transition-duration: 700ms;
             border: 5px solid rgba(0,0,0,0.1);
@@ -162,7 +162,7 @@ var menu = document.getElementById("menu");
     for(var i=0;i<div.length;i++){
         div[i].classList.remove("active");
     }
-    
+
     div[7].classList.add("active");
 
     var profile_button = document.getElementById("profile_button");
@@ -196,7 +196,7 @@ var menu = document.getElementById("menu");
 			}, 210);
 		}
     })
-    
+
     profile_button.addEventListener("click",function(event){
         window.location = '/profile'
     })
@@ -216,11 +216,15 @@ var menu = document.getElementById("menu");
     user_list_button.addEventListener("click",function(event){
         window.location = '/<%=data[0].role%>/userlist';
     });
+    community_list_button.addEventListener("click",function(event){
+        window.location = '/communtiy/communitylist';
+    });
+
 
 
     //Submit Button Listener to verify password in the database.
     submit_button.addEventListener('click',function(event){
-        var email = 'rajat@gmail.com';
+        var email = 'adhish@gmail.com';
         var oldPassword = document.getElementById('oldPassword').value;
         var newPassword = document.getElementById('newPassword').value;
         var password = new Object();
