--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Profile</title>
+    <title>CQ</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -206,11 +206,11 @@
     for(var i=0;i<div.length;i++){
         div[i].classList.remove("active");
     }
-    
+
     div[1].classList.add("active");
 
     var profile_button = document.getElementById("profile_button");
-    
+
     //Buttons on Left Navigation Drawer
     var profile_button_left = document.getElementById('profile_button_left');
     var add_user_button_left = document.getElementById('add_user_button_left');
@@ -242,7 +242,7 @@
 			}, 210);
 		}
     })
-    
+
     profile_button.addEventListener("click",function(event){
         window.location = '/profile'
     })
@@ -265,6 +265,9 @@
 
     tag_panel_button.addEventListener("click",function(event){
         window.location = '/tag';
+    });
+    community_list_button.addEventListener("click",function(event){
+        window.location = '/communtiy/communitylist';
     });
 
     user_list_button.addEventListener("click",function(event){
