--- a/views/communitylist.ejs
+++ b/views/communitylist.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="en" dir="ltr">
+  <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>CQ</title>
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>CQ</title>
     <style>
         body {
 			margin: 0;
@@ -172,94 +173,83 @@
             background: #ec971f;
         }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <% include partials/menu.html %>
-    <div id="body_internal_div">
-        <div id='create_tag_text'>
-            <h3>Create Tag</h3>
-        </div>
-        <div id="input_div">
-            <input type="text" placeholder="Tag Name">
-        </div>
-        <div id="button_div">
-            <button id="submit_button">Submit</button>
-        </div>
-    </div>
-    <div id="tags_list_div">
-        <button id="tags_list_button">Tags List</button>
-    </div>
-</body>
-<script>
-    var menu = document.getElementById("menu");
-    var sideBtn = document.getElementById("sideBtn");
-    var body_internal_div = document.getElementById("body_internal_div");
-    var span = menu.getElementsByTagName("span");
-    var div = menu.getElementsByTagName('div');
-    for(var i=0;i<div.length;i++){
-        div[i].classList.remove("active");
-    }
 
-    div[6].classList.add("active");
+  </body>
+  <script>
+      var menu = document.getElementById("menu");
+      var sideBtn = document.getElementById("sideBtn");
+      var body_internal_div = document.getElementById("body_internal_div");
+      var span = menu.getElementsByTagName("span");
+      var div = menu.getElementsByTagName('div');
+      for(var i=0;i<div.length;i++){
+          div[i].classList.remove("active");
+      }
 
-    var profile_button = document.getElementById("profile_button");
+      div[6].classList.add("active");
 
-    //Buttons on Left Navigation Drawer
-    var profile_button_left = document.getElementById('profile_button_left');
-    var add_user_button_left = document.getElementById('add_user_button_left');
-    var user_list_button = document.getElementById('user_list_button');
-    var community_list_button = document.getElementById('community_list_button');
-    var switch_user_button = document.getElementById('switch_user_button');
-    var tag_panel_button = document.getElementById('tag_panel_button');
-    var change_password_button = document.getElementById('change_password_button');
-    var logout_button = document.getElementById('logout_button');
+      var profile_button = document.getElementById("profile_button");
+
+      //Buttons on Left Navigation Drawer
+      var profile_button_left = document.getElementById('profile_button_left');
+      var add_user_button_left = document.getElementById('add_user_button_left');
+      var user_list_button = document.getElementById('user_list_button');
+      var community_list_button = document.getElementById('community_list_button');
+      var switch_user_button = document.getElementById('switch_user_button');
+      var tag_panel_button = document.getElementById('tag_panel_button');
+      var change_password_button = document.getElementById('change_password_button');
+      var logout_button = document.getElementById('logout_button');
 
 
-	sideBtn.addEventListener("click", function () {
-		if(menu.style.width == '300px') {
-            menu.style.width = '50px';
-            // body_internal_div.style.marginLeft = '12%';
-            // body_internal_div.style.marginTop = '2%';
-			for(var i = 0;i<span.length;i++) {
-				span[i].style.display = 'none';
-			}
-		} else {
-            menu.style.width = '300px';
-            // body_internal_div.style.marginLeft = '4%';
-            // body_internal_div.style.marginTop = '1.5%';
-			setTimeout(function () {
-				for(var i = 0;i<span.length;i++) {
-					span[i].style.display = 'inline';
-				}
-			}, 210);
-		}
-    })
+  	sideBtn.addEventListener("click", function () {
+  		if(menu.style.width == '300px') {
+              menu.style.width = '50px';
+              // body_internal_div.style.marginLeft = '12%';
+              // body_internal_div.style.marginTop = '2%';
+  			for(var i = 0;i<span.length;i++) {
+  				span[i].style.display = 'none';
+  			}
+  		} else {
+              menu.style.width = '300px';
+              // body_internal_div.style.marginLeft = '4%';
+              // body_internal_div.style.marginTop = '1.5%';
+  			setTimeout(function () {
+  				for(var i = 0;i<span.length;i++) {
+  					span[i].style.display = 'inline';
+  				}
+  			}, 210);
+  		}
+      })
 
-    profile_button.addEventListener("click",function(event){
-        window.location = '/profile'
-    })
+      profile_button.addEventListener("click",function(event){
+          window.location = '/profile'
+      })
 
-    change_password_button.addEventListener('click',function(event){
-        window.location = '/changePassword';
-    });
+      change_password_button.addEventListener('click',function(event){
+          window.location = '/changePassword';
+      });
 
-    add_user_button_left.addEventListener('click',function(event){
-        window.location = '/<%= data[0].role%>/adduser';
-    });
+      add_user_button_left.addEventListener('click',function(event){
+          window.location = '/<%= data[0].role%>/adduser';
+      });
 
-    profile_button_left.addEventListener("click",function(event){
-        window.location = '/<%= data[0].role%>/profile';
-    });
+      profile_button_left.addEventListener("click",function(event){
+          window.location = '/<%= data[0].role%>/profile';
+      });
+      community_list_button.addEventListener("click",function(event){
+          window.location = '/communtiy/communitylist';
+      });
 
-    tag_panel_button.addEventListener("click",function(event){
-        window.location = '/tag';
-    });
-    community_list_button.addEventListener("click",function(event){
-        window.location = '/communtiy/communitylist';
-    });
-    user_list_button.addEventListener("click",function(event){
-        window.location = '/<%=data[0].role%>/userlist';
-    });
+      tag_panel_button.addEventListener("click",function(event){
+          window.location = '/tag';
+      });
 
-</script>
+      user_list_button.addEventListener("click",function(event){
+          window.location = '/<%=data[0].role%>/userlist';
+      });
+
+  </script>
+
 </html>
