--- a/views/userlist.ejs
+++ b/views/userlist.ejs
@@ -17,31 +17,34 @@
         } );
     </script>
     <style>
-        body {
-            position: relative;
-			margin: 0;
-            padding: 0;
-            background: #f5f5f5;
-            font-family: 'Roboto', sans-serif;
-		}
-		nav {
+        *{
+          box-sizing: border-box;
+        }
+        body{
+          margin: 0;
+          padding: 0;
+          width: 100%;
+          background: #f5f5f5;
+          font-family: 'Roboto', sans-serif;
+    }
+    nav{
             position: absolute;
             width:100%;
             height: 60px;
-			background-color: #222D3C;
+      background-color: #222D3C;
             color: #fff;
             z-index: 999999999;
-		}
-		nav p {
-			margin: 0;
+    }
+    nav p {
+      margin: 0;
             float: left;
             height: 50px;
             padding: 15px 15px;
             font-size: 20px;
             line-height: 20px;
             font-weight: bold;
-		}
-		nav span {
+    }
+    nav span {
             float: right;
             padding: .2em .6em .3em;
             margin-top: 22px;
@@ -54,46 +57,43 @@
             vertical-align: center;
             border-radius: .25em;
             vertical-align: baseline;
-            border-radius: .25em;
-		}
-		nav img {
-			float: right;
-			border-radius: 50%;
-			padding: 15px;
+    }
+    nav img {
+      float: right;
+      border-radius: 50%;
+      padding: 15px;
         }
-		#menu {
+    #menu {
             padding-top: 60px;
-			background-color: #000;
-			width: 50px;
-			transition-property: width;
-			transition-duration: 0.7s;
+            background-color: #000;
+            width: 50px;
+            height:100vh;
+            color:white;
             box-sizing: border-box;
-            float: left;
-            height: 100vh;
-		}
-		.fa {
-			color: #fff;
-			font-size: 25px;
-			width: 30px;
-			margin: 6px 15px;
-			margin-left: 11px;
-			box-sizing: border-box;
-		}
-		#menu span {
-			display: none;
-		}
-		.menu-item {
-			cursor: pointer;
-			opacity: 0.8;
-			color: #fff;
-			font-family: sans-serif;
-			font-size: 14px;
-		}
-		.menu-item:hover {
-			border-left: 2px solid red;
-			opacity: 1;
-			background-color: #4d5866;
-		}
+            overflow:hidden;
+    }
+    .fa {
+      color: #fff;
+      font-size: 25px;
+      width: 30px;
+      margin: 6px 15px;
+      margin-left: 11px;
+      box-sizing: border-box;
+    }
+    .menu-item {
+            width: 250px;
+      cursor: pointer;
+      opacity: 0.8;
+      color: #fff;
+      font-family: sans-serif;
+      font-size: 14px;
+            padding-top: 10px;
+    }
+    .menu-item:hover {
+      border-left: 2px solid red;
+      opacity: 1;
+      background-color: #4d5866;
+    }
         #user_icon{
             height:100%;
             width: 10%;
@@ -105,12 +105,13 @@
             cursor: pointer;
         }
         #body_div{
-            margin-left: 0.5%;
-            float: left;
-            min-width: 95%;
-            width: auto;
-            height: 100%;
-            margin-top: 60px;
+         position:absolute;
+         left:50px;
+         right:0;
+         top:60px;
+         bottom:0;
+         margin-left: 1%;
+         overflow:auto;
         }
         table{
             min-width: 50%;
@@ -618,25 +619,17 @@
     var logout_button = document.getElementById('logout_button');
 
 
-	sideBtn.addEventListener("click", function () {
-		if(menu.style.width == '250px') {
-            menu.style.width = '50px';
-            // body_internal_div.style.marginLeft = '12%';
-            // body_internal_div.style.marginTop = '2%';
-			for(var i = 0;i<span.length;i++) {
-				span[i].style.display = 'none';
-			}
-		} else {
-            menu.style.width = '250px';
-            // body_internal_div.style.marginLeft = '4%';
-            // body_internal_div.style.marginTop = '1.5%';
-			setTimeout(function () {
-				for(var i = 0;i<span.length;i++) {
-					span[i].style.display = 'inline';
-				}
-			}, 210);
-		}
-    })
+    $(document).ready(function(){
+      $("#sideBtn").click(function(){
+         if($("#menu").width() == 50){
+            $("#menu").animate({width: '250px'},300);
+            $("#body_div").animate({left:'250px'},300);
+         } else{
+            $("#menu").animate({width: '50px'},300);
+            $("#body_div").animate({left:'50px'},300);
+         }
+      });
+   });
 
     profile_button.addEventListener("click",function(event){
         window.location = '/profile'
