--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -79,14 +79,14 @@
 		}
         #user_icon{
             height:100%;
-            width: 10%;
+            width: auto;
         }
         #body_internal_div{
             float: left;
             margin-left:12%;
             margin-top: 2%;
             transition-duration: 700ms;
-            height: 550px;
+            height: 600px;
             width: 70%;
             border: 1px solid #eeeeee;
             box-shadow: 0px 1px 10px 0px rgb(201, 201, 201);
@@ -96,10 +96,7 @@
             height:30%;
             line-height: 30%;
         }
-        #user_icon{
-            padding: 25px;
-            font-size: 100px;
-        }
+
         #fields_outer_div{
             height:65%;
             width: 100%;
@@ -162,12 +159,24 @@
         #profile_button{
             cursor: pointer;
         }
+        #profile_div{
+          padding: 0;
+          margin: 0;
+          height: 150px;
+          width: 150px;
+          margin-left: 15px;
+          margin-top: 15px;
+          border: 1px solid rgb(211, 211, 211);
+          box-shadow: 0px 2px 10px 0px rgb(201, 201, 201);
+
+
+        }
     </style>
 </head>
 <body>
     <% include partials/menu.html %>
     <div id="body_internal_div">
-        <div id="body_internal_profile_div"><span><i class="far fa-user" id="user_icon"></i></span></div>
+        <div id="body_internal_profile_div"><div class="body_profile_div" id="profile_div"><span><img src="/images/default.png" class="far fa-user" id="user_icon"></div></span></div>
         <div id="fields_outer_div">
             <div id="edit_button_div"><button class="btn" id="edit_button">Edit</button></div>
             <div class="outer_div">
