--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -229,8 +229,9 @@
     var tag_panel_button = document.getElementById('tag_panel_button');
     var change_password_button = document.getElementById('change_password_button');
     var logout_button = document.getElementById('logout_button');
-
+    var profile_picture=document.getElementById('user_icon');
     var edit_button = document.getElementById("edit_button");
+    profile_picture.src="/uploads/"+'<%= data[0].email%>'+'.jpg';
 
 	sideBtn.addEventListener("click", function () {
 		if(menu.style.width == '300px') {
@@ -282,6 +283,23 @@
     user_list_button.addEventListener("click",function(event){
         window.location = '/<%=data[0].role%>/userlist';
     });
-
+    logout_button.addEventListener("click",function(event){
+        $.confirm({
+            title: 'Confirm Logout',
+            boxWidth: '20%',
+            theme: 'supervan',
+            // backgroundDismissAnimation: 'random',
+            useBootstrap: false,
+            content: 'Do you really want logout?',
+            buttons: {
+                Yes: function () {
+                    window.location = '/logout';
+                },
+                No: function () {
+                // $.alert('No');
+                }
+            }
+        });
+    });
 </script>
 </html>
