--- a/views/userlist.ejs
+++ b/views/userlist.ejs
@@ -364,6 +364,9 @@
     tag_panel_button.addEventListener("click",function(event){
         window.location = '/tag';
     });
+    community_list_button.addEventListener("click",function(event){
+        window.location = '/communtiy/communitylist';
+    });
 
     user_list_button.addEventListener("click",function(event){
         window.location = '/<%=data[0].role%>/userlist';
