--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -86,14 +86,14 @@
             margin-left:12%;
             margin-top: 2%;
             transition-duration: 700ms;
-            height: 600px;
+            height: 700px;
             width: 70%;
             border: 1px solid #eeeeee;
             box-shadow: 0px 1px 10px 0px rgb(201, 201, 201);
         }
         #body_internal_profile_div{
             width: 100%;
-            height:30%;
+            height:35%;
             line-height: 30%;
         }
 
@@ -164,7 +164,7 @@
         #profile_div{
           padding: 0;
           margin: 0;
-          height: 150px;
+          height: 190px;
           width: 150px;
           margin-left: 15px;
           margin-top: 15px;
@@ -178,7 +178,7 @@
 <body>
     <% include partials/menu.html %>
     <div id="body_internal_div">
-        <div id="body_internal_profile_div"><div class="body_profile_div" id="profile_div"><span><img src="/images/default.png" class="far fa-user" id="user_icon"></div></span></div>
+        <div id="body_internal_profile_div"><div class="body_profile_div" id="profile_div"><span><img src="/uploads/<%=data[0].image%>" class="far fa-user" id="user_icon"></div></span></div>
         <div id="fields_outer_div">
             <div id="edit_button_div"><button class="btn" id="edit_button">Edit</button></div>
             <div class="outer_div">
@@ -233,7 +233,6 @@
     var logout_button = document.getElementById('logout_button');
     var profile_picture=document.getElementById('user_icon');
     var edit_button = document.getElementById("edit_button");
-    profile_picture.src="/uploads/"+'<%= data[0].email%>'+'.jpg';
 
 	sideBtn.addEventListener("click", function () {
 		if(menu.style.width == '300px') {
