--- a/views/adduser.ejs
+++ b/views/adduser.ejs
@@ -99,6 +99,8 @@
         }
         #profile_button{
             cursor: pointer;
+            height: 75px;
+            width: auto;
         }
         #body_internal_div{
             position: absolute;
