--- a/views/editprofile.ejs
+++ b/views/editprofile.ejs
@@ -102,6 +102,8 @@
         }
         #profile_button{
             cursor: pointer;
+            height: 75px;
+            width: auto;
         }
         #body_internal_div{
             background: #fff;
