--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -137,6 +137,8 @@
         }
         #profile_button{
             cursor: pointer;
+            height: 50px;
+            width: auto;
         }
         #profile_div{
           padding: 0;
