--- a/views/partials/menu.html
+++ b/views/partials/menu.html
@@ -1,6 +1,7 @@
+</style>
 <nav>
     <p>cq</p>
-    <img src="https://via.placeholder.com/30" alt="" id="profile_button">
+    <img src="/uploads/<%=data[0].image%>" alt="" id="profile_button">
     <span style="background: #5cb85c"><%= data[0].role%></span>
     <span style="background: #f0ad4e"><%= data[0].name%></span>
 </nav>
