--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -160,6 +160,8 @@
         }
         #profile_button{
             cursor: pointer;
+            height: 50px;
+            width: auto;
         }
         #profile_div{
           padding: 0;
