--- a/views/communitylist.ejs
+++ b/views/communitylist.ejs
@@ -6,12 +6,10 @@
     <title>CQ</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-    <link rel="stylesheet" href="//stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CQ</title>
     <style>
@@ -91,6 +89,8 @@
         }
         #profile_button{
             cursor: pointer;
+            height: 50px;
+            width: auto;
         }
         #body_internal_div{
             background: #fff;
@@ -129,54 +129,7 @@
             padding:0;
             font-size: 24px;
         }
-        #button_div{
-            display: inline-block;
-            width: 100%;
-            margin-top: 4%;
-        }
-        #submit_button{
-            color: #fff;
-            width: inherit;
-            background-color: #337ab7;
-            border-color: #2e6da4;
-            border: 1px solid;
-            padding: 6px 12px;
-            font-size: 14px;
-            font-weight: 400;
-            text-align: center;
-            vertical-align: middle;
-            line-height: 1.42857143;
-        }
-        #submit_button:hover{
-            color: #fff;
-            background-color: #2e6da4;
-        }
-        #tags_list_div{
-            margin-top: 20px;
-            width: 100px;
-            height: 30px;
-            text-align: center;
-            margin-left:50%;
-            transform: translateX(-50%);
-        }
-        #tags_list_button{
-            color: #fff;
-            background-color: #d58512;
-            border-color: #ec971f;
-            border: 1px;
-            display: inline-block;
-            padding: 6px 12px;
-            margin-bottom: 0;
-            font-size: 14px;
-            font-weight: 400;
-            line-height: 1.42857143;
-            text-align: center;
-            white-space: nowrap;
-            vertical-align: middle;
-        }
-        #tags_list_button:hover{
-            background: #ec971f;
-        }
+
     </style>
   </head>
   <body>
