[Added Community List for Admin]

--- a/views/communitylist.ejs
+++ b/views/communitylist.ejs
@@ -4,44 +4,63 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>CQ</title>
+    <link rel="stylesheet" href="/trumbowyg.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link href="//cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="//cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CQ</title>
+    <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script>
+        $(document).ready( function () {
+        $('#example').DataTable();
+        } );
+    </script>
     <style>
-        body {
-			margin: 0;
-            padding: 0;
-            background: #f5f5f5;
-            font-family: 'Roboto', sans-serif;
+        *{
+          box-sizing: border-box;
+        }
+        body{
+          margin: 0;
+          padding: 0;
+          width: 100%;
+          background: #f5f5f5;
+          font-family: 'Roboto', sans-serif;
 		}
-		nav {
+		nav{
+            position: absolute;
             width:100%;
-            height: 8vh;
+            height: 60px;
 			background-color: #222D3C;
             color: #fff;
 		}
 		nav p {
 			margin: 0;
-			font-size: 30px;
-			padding: 10px;
-			float: left;
+            float: left;
+            height: 50px;
+            padding: 15px 15px;
+            font-size: 20px;
+            line-height: 20px;
+            font-weight: bold;
 		}
 		nav span {
+            float: right;
             padding: .2em .6em .3em;
+            margin-top: 22px;
+            margin-left: 5px;
             font-size: 75%;
-            font-weight: 500;
+            line-height: 1;
+            font-weight: 700;
             color: #fff;
-            margin-top: 2.5vh;
-            margin-left: 1vh;
             font-size: 14px;
             vertical-align: center;
             border-radius: .25em;
-            float: right;
+            vertical-align: baseline;
 		}
 		nav img {
 			float: right;
@@ -49,13 +68,13 @@
 			padding: 15px;
         }
 		#menu {
-			background-color:#000;
-			width: 50px;
-			transition-property: width;
-			transition-duration: 0.7s;
+            padding-top: 60px;
+            background-color: #000;
+            width: 50px;
+            height:100vh;
+            color:white;
             box-sizing: border-box;
-            float: left;
-            height:92vh;
+            overflow:hidden;
 		}
 		.fa {
 			color: #fff;
@@ -65,15 +84,14 @@
 			margin-left: 11px;
 			box-sizing: border-box;
 		}
-		#menu span {
-			display: none;
-		}
 		.menu-item {
+            width: 250px;
 			cursor: pointer;
 			opacity: 0.8;
 			color: #fff;
 			font-family: sans-serif;
 			font-size: 14px;
+            padding-top: 10px;
 		}
 		.menu-item:hover {
 			border-left: 2px solid red;
@@ -89,54 +107,210 @@
         }
         #profile_button{
             cursor: pointer;
-            height: 50px;
+            height: 75px;
             width: auto;
         }
-        #body_internal_div{
-            background: #fff;
-            box-sizing: border-box;
-            width: 30%;
-            padding-bottom: 1.5%;
-            box-shadow: 0 0 10px rgba(0,0,0,0.6);
-            margin-left: 32.5%;
-            margin-top: 100px;
-            box-sizing: border-box;
-            padding-left:1%;
-            padding-right: 1%;
+        #body_div{
+			position:absolute;
+			left:50px;
+			right:0;
+			top:70px;
+			bottom:0;
+			margin-left: 1%;
+			overflow:auto;
         }
-        #create_tag_text{
-            padding-top:25px;
-            color: #707070;
-            border-bottom: 1px solid #eee;
-            padding-bottom: 10px;
+        table{
+            min-width: 50%;
+            width: auto;
+            height: 500px;
         }
-        #input_div{
-            margin-top:4%;
-        }
-        input{
-            width: 100%;
-            padding: 6px 12px;
-            font-size: 14px;
-            line-height: 1.42857143;
-            color: #555;
-            background-color: #fff;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box;
-        }
-        h3{
-            margin:0;
-            padding:0;
-            font-size: 24px;
-        }
-
+        #tag {
+			width: 100px;
+			background-color: #2D312C;
+			color: #fff;
+			text-align: center;
+			padding: 6px;
+			border-radius: 4px;
+			box-shadow: 1px 1px 1px #2D312C, -1px -1px 1px #2D312C;
+		}
+		#refresh {
+			background-color: #2D312C;
+			width: 100px;
+			font-size: 18px;
+			padding: 6px;
+			text-align: center;
+			float: right;
+			cursor: pointer;
+		}
+		#head-btns {
+			padding-top: 5px;
+		}
+		#filter {
+			width: 150px;
+			background-color: #2D312C;
+			color: white;
+			height: 35px;
+			border-radius: 5px;
+			padding-left: 10px;
+			margin-right: 10px;
+			float: right;
+		}
+		#role {
+			background-color: #2D312C;
+			width: 200px;
+			color: white;
+			height: 35px;
+			padding-left: 10px;
+			border-radius: 5px;
+			float: right;
+		}
+		.actions-btn {
+			width: 35px;
+			height: 35px;
+			margin: 5px 5px 0;
+			padding: 5px;
+		}
+		.actions-btn span {
+			color: #fff;
+			font-size: 15px;
+			width: auto;
+			margin: 0;
+			box-sizing: initial;
+		}
     </style>
   </head>
   <body>
     <% include partials/menu.html %>
+    <div class="modal fade" tabindex="-1" role="dialog" id="editModal">
+  		<div class="modal-dialog" role="document">
+  			<div class="modal-content">
+  			  <div class="modal-header">
+  			    <h5 class="modal-title" id="usernameTitle">Update </h5>
+  			    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+  			      <span aria-hidden="true">&times;</span>
+  			    </button>
+  			  </div>
+  			  <div class="modal-body">
+  			    <form>
+  			    	<div class="form-group row">
+  			    		<label class="col-sm-2 col-form-label"><b>Username: </b></label>
+  			    		<div class="col-sm-10">
+  			    			<input type="text" class="form-control" id="editUserName">
+  			    		</div>
+  			    	</div>
+  			    	<div class="form-group row">
+  			    		<label class="col-sm-2 col-form-label"><b>Phone: </b></label>
+  			    		<div class="col-sm-10">
+  			    			<input type="text" class="form-control" id="editPhoneNo">
+  			    		</div>
+  			    	</div>
+  			    	<div class="form-group row">
+  			    		<label class="col-sm-2 col-form-label"><b>City: </b></label>
+  			    		<div class="col-sm-10">
+  			    			<input type="text" class="form-control" id="editCity">
+  			    		</div>
+  			    	</div>
+  			    	<div class="form-group row">
+  			    		<label class="col-sm-2 col-form-label"><b>Status: </b></label>
+  			    		<div class="col-sm-10">
+  			    			<select class="form-control" id="editStatus">
+  			    				<option>Confirmed</option>
+  			    				<option>Pending</option>
+  			    			</select>
+  			    		</div>
+  			    	</div>
+  			    	<div class="form-group row">
+  			    		<label class="col-sm-2 col-form-label"><b>Role: </b></label>
+  			    		<div class="col-sm-10">
+  			    			<select class="form-control" id="editRole">
+  			    				<option>User</option>
+  			    				<option>Community Builder</option>
+  			    				<option>Admin</option>
+  			    			</select>
+  			    		</div>
+  			    	</div>
+  			    	<div class="form-group row">
+  			    		<div class="col-sm-10">
+  			    			<button type="button" class="btn btn-secondary" id="updateBtn">Update</button>
+  			    		</div>
+  			    	</div>
+  			    </form>
+  			  </div>
+  			  <div class="modal-footer">
+  			    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+  			  </div>
+  			</div>
+  		</div>
+  	</div>
+  	<div class="modal fade" tabindex="-1" role="dialog" id="emailModal">
+  		<div class="modal-dialog" role="document">
+  			<div class="modal-content">
+  			  <div class="modal-header">
+  			    <h5 class="modal-title">Send Reminder Mail</h5>
+  			    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+  			      <span aria-hidden="true">&times;</span>
+  			    </button>
+  			  </div>
+  			  <div class="modal-body">
+  			    <form>
+  			    	<div class="form-group row">
+  			    		<label class="col-sm-2 col-form-label"><b>To: </b></label>
+  			    		<div class="col-sm-10">
+  			    			<input type="text" readonly class="form-control" id="sendTo">
+  			    		</div>
+  			    	</div>
+  			    	<div class="form-group row">
+  			    		<label class="col-sm-2 col-form-label"><b>Subject: </b></label>
+  			    		<div class="col-sm-10">
+  			    			<input type="text" class="form-control" value="(This mail is from CQ)" id="emailSubject">
+  			    		</div>
+  			    	</div>
+  			    	<div class="form-group row">
+  			    		<div class="col-12">
+  			    			<textarea style="resize: none;" cols="30" rows="10" class="form-control" id="textarea" ></textarea>
+  			    		</div>
+  			    	</div>
+  			    </form>
+  			  </div>
+  			  <div class="modal-footer">
+  			    <button type="button" class="btn btn-secondary" id="sendMail" data-dismiss="modal">Send</button>
+  			  </div>
+  			</div>
+  		</div>
+  	</div>
+      <div id="body_div">
+          <div id="head-btns">
+                  <span id="tag">Community List</span>
+                  <select id="filter">
+                      <option value="All">All</option>
+                      <option value="Pending">Direct</option>
+                      <option value="Confirmed">Permission</option>
+                  </select>
+                  <span id="refresh" class="fa fa-refresh">Refresh</span>
+          </div>
+          <table id="myTable" class="display" style="width:100%">
+                  <thead>
+                      <tr>
+                          <th>Community Name</th>
+                          <th>Membership Rule</th>
+                          <th>Community Location</th>
+                          <th>Community Owner</th>
+                          <th>Create Date</th>
+                          <th>Actions</th>
+                          <th>Community Pic</th>
+                      </tr>
+                  </thead>
+                  <tbody>
+
+                  </tbody>
+          </table>
+      </div>
+
 
   </body>
   <script>
+  var asc = <%- JSON.stringify(data)%>;
+
       var menu = document.getElementById("menu");
       var sideBtn = document.getElementById("sideBtn");
       var body_internal_div = document.getElementById("body_internal_div");
@@ -226,6 +400,40 @@
           });
       });
 
+      $(document).ready(function() {
+  		$.ajax({
+  			url: initTable(),
+  			success: function () {
+  				//appendBtns();
+  			}
+  		});
+  	});
+    function initTable() {
+  		$('#myTable').DataTable({
+  			"processing": true,
+  			"serverSide": true,
+  			"ajax": {
+  				"url": "/community/communityList",
+  				"type": "POST",
+  			},
+  			"columns": [
+  				{ "data" : "name" },
+  				{ "data" : "phoneno" },
+  				{ "data" : "city" },
+  				{ "data" : "status" },
+  				{ "data" : "role",
+  				  "class": "role" },
+  				{ "data" : null },
+  			],
+  			"columnDefs": [{
+                  "targets": -1,
+                  "render": function (data, type, row, meta) {
+                     data = '<center class="actions"></center>';
+                 		return data;
+                  }
+              }],
+  		});
+  	}
   </script>
 
 </html>
