--- a/views/userlist.ejs
+++ b/views/userlist.ejs
@@ -403,16 +403,21 @@
 	});
 
 
-	function initTable() {
-		$('#myTable').DataTable({
+  function initTable() {
+		let table = $('#myTable').DataTable({
 			"processing": true,
 			"serverSide": true,
 			"ajax": {
 				"url": "/getUserData",
 				"type": "POST",
+				"async": false,
+				"data": function( d ) {
+					d.role   = $('#role').val();
+					d.status = $('#filter').val();
+				},
 			},
 			"columns": [
-				{ "data" : "name" },
+				{ "data" : "email" },
 				{ "data" : "phoneno" },
 				{ "data" : "city" },
 				{ "data" : "status" },
@@ -421,27 +426,35 @@
 				{ "data" : null },
 			],
 			"columnDefs": [{
-                "targets": -1,
-                "render": function (data, type, row, meta) {
-                   data = '<center class="actions"></center>';
-               		return data;
-                }
-            }],
+					"targets": -1,
+					"render": function (data, type, row, meta) {
+							data = '<center class="actions"></center>';
+						return data;
+					}
+			}],
 		});
+		$('#role').on('click', function() {
+			table.ajax.reload(null, false);
+			appendBtns();
+		})
+		$('#filter').on('click', function() {
+				table.ajax.reload(null, false);
+				appendBtns();
+		})
+		$('#refresh').on('click', function() {
+			table.ajax.reload(null, false);
+			appendBtns();
+		})
 	}
 	function appendBtns() {
 		var actionsCol = document.getElementsByClassName("actions");
 		var roleCol = document.getElementsByClassName("role");
-		var refreshBtn = document.getElementById("refresh");
 		var sendToInput = document.getElementById("sendTo");
 		var emailSubject = document.getElementById("emailSubject");
 		var emailSendBtn = document.getElementById("sendMail");
-		refreshBtn.addEventListener("click", function () {
-			window.location.reload();
-		})
 		for(var i = 1;i<roleCol.length;i++ ) {
 			state = asc[i-1].flag;
-			if(roleCol[i].innerHTML == "admin" || roleCol[i].innerHTML == "user") {
+			if(roleCol[i].innerHTML == "admin" || roleCol[i].innerHTML == "user" || roleCol[i].innerHTML=='community builder') {
 				let emailBtn = document.createElement("button");
 				let editBtn = document.createElement("button");
 				let stateBtn = document.createElement("button");
@@ -483,7 +496,8 @@
 						$('#editModal').modal("hide");
 					})
 					setInterval(function () {
-						if(($("#editModal").hasClass('show')) == false) {
+						if(($("#editModal"
+						).hasClass('show')) == false) {
 							usernameTitle.innerHTML = "Update ";
 						}
 					}, 1000);
@@ -507,9 +521,9 @@
 					emailSendBtn.addEventListener("click", function () {
 						var data = new Object({
 							to: sendTo.value,
-							from: "adhishanand9@gmail.com",
+							from: "ridhavrm@gmail.com",
 							subject: emailSubject.value,
-							text: $('#textarea').val(),
+							html: $('#textarea').val(),
 						});
 						var req = new XMLHttpRequest();
 						req.open("POST", "/sendMail");
@@ -520,6 +534,16 @@
 
 				stateBtn.setAttribute("id", asc[i - 1]._id);
 				stateBtn.addEventListener("click", function (event) {
+					var id;
+					if(event.target.tagName == "SPAN")
+						id = event.target.parentNode.getAttribute("id");
+					else
+						id = event.target.getAttribute("id");
+						for(var j = 0;j<asc.length;j++) {
+							if((asc[j]._id) == id) {
+								state = asc[j].flag;
+							}
+						}
 					if(state == "0") {
 						stateBtn.classList.remove("btn-warning");
 						stateBtn.classList.add("actions-btn", "btn", "btn-success");
@@ -533,11 +557,6 @@
 						stateBtn.childNodes[0].setAttribute("class", "fa fa-times-circle");
 						state = "0";
 					}
-					var id;
-					if(event.target.tagName == "SPAN")
-						id = event.target.parentNode.getAttribute("id");
-					else
-						id = event.target.getAttribute("id");
 					var req = new XMLHttpRequest();
 					req.open("POST", "/updateState");
 					req.setRequestHeader("Content-Type", "application/json");
