[Updated CSS and added Tag]

--- a/views/adduser.ejs
+++ b/views/adduser.ejs
@@ -99,8 +99,10 @@
         }
         #profile_button{
             cursor: pointer;
-            height: 75px;
-            width: auto;
+            padding: 0;
+          padding-left: 5px;
+          padding-top: 5px;
+          height: 60px;
         }
         #body_internal_div{
             position: absolute;
