--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -12,35 +12,46 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
+    *{
+        box-sizing: border-box;
+    }
         body {
 			margin: 0;
             padding: 0;
+            width: 100%;
             background: #f5f5f5;
             font-family: 'Roboto', sans-serif;
 		}
 		nav {
+            position: fixed;
             width:100%;
-            height: 8vh;
+            height: 60px;
 			background-color: #222D3C;
             color: #fff;
+            z-index: 99999999;
 		}
 		nav p {
 			margin: 0;
-			font-size: 30px;
-			padding: 10px;
-			float: left;
+            float: left;
+            height: 50px;
+            padding: 15px 15px;
+			font-size: 20px;
+            line-height: 20px;
+            font-weight: bold;
 		}
 		nav span {
+            float: right;
             padding: .2em .6em .3em;
+            margin-top: 22px;
+            margin-left: 5px;
             font-size: 75%;
-            font-weight: 500;
+            line-height: 1;
+            font-weight: 700;
             color: #fff;
-            margin-top: 2.5vh;
-            margin-left: 1vh;
             font-size: 14px;
             vertical-align: center;
             border-radius: .25em;
-            float: right;
+            vertical-align: baseline;
 		}
 		nav img {
 			float: right;
@@ -48,13 +59,14 @@
 			padding: 15px;
         }
 		#menu {
-			background-color:#000;
-			width: 50px;
-			transition-property: width;
-			transition-duration: 0.7s;
+            position:fixed;
+            padding-top: 60px;
+            background-color: #000;
+            width: 50px;
+            height: 100vh;
+            color: white;
             box-sizing: border-box;
-            float: left;
-            height:92vh;
+            overflow: hidden;
 		}
 		.fa {
 			color: #fff;
@@ -64,15 +76,14 @@
 			margin-left: 11px;
 			box-sizing: border-box;
 		}
-		#menu span {
-			display: none;
-		}
 		.menu-item {
+            width: 250px;
 			cursor: pointer;
 			opacity: 0.8;
 			color: #fff;
 			font-family: sans-serif;
 			font-size: 14px;
+            padding-top: 10px;
 		}
 		.menu-item:hover {
 			border-left: 2px solid red;
@@ -80,37 +91,48 @@
 			background-color: #4d5866;
 		}
         #user_icon{
-          position: relative;
-          padding: 0;
-          margin: 0;
-          height:100%;
-          width: auto;
+            height:100%;
+            width: 10%;
         }
         #body_internal_div{
-            float: left;
-            margin-left:12%;
-            margin-top: 2%;
-            transition-duration: 700ms;
-            height: 700px;
-            width: 70%;
+            position: absolute;
+            left: 14%;
+            top: 12%;
+            width: 72%;
+            height: 540px;
+            overflow: hidden;
             border: 1px solid #eeeeee;
             box-shadow: 0px 1px 10px 0px rgb(201, 201, 201);
         }
         #body_internal_profile_div{
-          width: 100%;
-          height:35%;
-          line-height: 30%;
-          position: relative;
+            width: 100%;
+            height:30%;
+            line-height: 30%;
+            margin-bottom: 18px;
         }
-
+        #user_icon{
+            width: auto;
+        }
+        #profile_div{
+            padding:0;
+            margin:0;
+            margin-left: 18px;
+            margin-top: 18px;
+            height: 150px;
+            width: 150px;
+            box-shadow: 0px 1px 10px 0px rgb(201, 201, 201);
+        }
+        .active{
+            background: #51a1e2 !important;
+        }
         #fields_outer_div{
-            height:65%;
+            height:70%;
             width: 100%;
         }
         .outer_div{
             height:22%;
             margin-left:2%;
-            margin-top: 3%;
+            margin-top: 2%;
             width:47%;
             text-align: center;
             float: left;
@@ -132,23 +154,12 @@
             line-height: 2em;
             text-align: left;
         }
-        .active{
-            background: #51a1e2 !important;
-        }
         #profile_button{
             cursor: pointer;
-            height: 50px;
-            width: auto;
-        }
-        #profile_div{
-          padding: 0;
-          margin: 0;
-          height: 190px;
-          width: 150px;
-          margin-left: 15px;
-          margin-top: 15px;
-          border: 1px solid rgb(211, 211, 211);
-          box-shadow: 0px 2px 10px 0px rgb(201, 201, 201);
+            padding: 0;
+            padding-left: 5px;
+            padding-top: 5px;
+            height: 60px;
         }
     </style>
 </head>
@@ -209,25 +220,17 @@
     var logout_button = document.getElementById('logout_button');
 
 
-	sideBtn.addEventListener("click", function () {
-		if(menu.style.width == '300px') {
-            menu.style.width = '50px';
-            body_internal_div.style.marginLeft = '12%';
-            body_internal_div.style.marginTop = '2%';
-			for(var i = 0;i<span.length;i++) {
-				span[i].style.display = 'none';
-			}
-		} else {
-            menu.style.width = '300px';
-            body_internal_div.style.marginLeft = '4%';
-            body_internal_div.style.marginTop = '1.5%';
-			setTimeout(function () {
-				for(var i = 0;i<span.length;i++) {
-					span[i].style.display = 'inline';
-				}
-			}, 210);
-		}
-    })
+    $(document).ready(function(){
+        $("#sideBtn").click(function(){
+           if($("#menu").width() == 50){
+              $("#menu").animate({width: '250px'},400);
+              $("#body_internal_div").animate({left:'20%'},300);
+           } else{
+              $("#menu").animate({width: '50px'},400);
+              $("#body_internal_div").animate({left:'14%'},300);
+              }
+          });
+      });
 
     profile_button.addEventListener("click",function(event){
         window.location = '/profile'
