--- a/views/changepassword.ejs
+++ b/views/changepassword.ejs
@@ -11,138 +11,150 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-        body {
-			margin: 0;
-            padding: 0;
-            background: #f5f5f5;
-            font-family: 'Roboto', sans-serif;
-		}
-		nav {
-            width:100%;
-            height: 8vh;
-			background-color: #222D3C;
-            color: #fff;
-		}
-		nav p {
-			margin: 0;
-			font-size: 30px;
-			padding: 10px;
-			float: left;
-		}
-		nav span {
-            padding: .2em .6em .3em;
-            font-size: 75%;
-            font-weight: 500;
-            color: #fff;
-            margin-top: 2.5vh;
-            margin-left: 1vh;
-            font-size: 14px;
-            vertical-align: center;
-            border-radius: .25em;
-            float: right;
-		}
-		nav img {
-			float: right;
-			border-radius: 50%;
-			padding: 15px;
-        }
-		#menu {
-			background-color: #000;
-			width: 50px;
-			transition-property: width;
-			transition-duration: 0.7s;
-            box-sizing: border-box;
-            float: left;
-            height:92vh;
-		}
-		.fa {
-			color: #fff;
-			font-size: 25px;
-			width: 30px;
-			margin: 6px 15px;
-			margin-left: 11px;
-			box-sizing: border-box;
-		}
-		#menu span {
-			display: none;
-		}
-		.menu-item {
-			cursor: pointer;
-			opacity: 0.8;
-			color: #fff;
-			font-family: sans-serif;
-			font-size: 14px;
-		}
-		.menu-item:hover {
-			border-left: 2px solid red;
-			opacity: 1;
-			background-color: #4d5866;
-		}
-        #user_icon{
-            height:100%;
-            width: 10%;
-        }
-        #change_password_outerdiv{
-            margin-top: 30px;
-            margin-left: 30%;
-            min-height: 320px;
-            height: auto;
-            max-width: 30%;
-            width: auto;
-            transition-duration: 700ms;
-            border: 5px solid rgba(0,0,0,0.1);
-            padding: 25px;
-            background: #fff;
-            color: #333;
-        }
-        div h1{
-            margin:0;
-            font-size: 2em;
-            margin-top: 15px;
-            font-weight: 500;
-        }
-        *{
-            box-sizing: border-box;
-        }
-        div label{
-            transform: translateY(-50%,-50%);
-            font-weight: 600;
-            display: inline-block;
-            width: 100%;
-            margin-top: 15px;
-            cursor: default;
-            box-sizing: border-box;
-        }
-        div input{
-            width:100%;
-            margin-top: 7px;
-            font-size: 1em;
-            height:30px;
-            padding:1px;
-            border-radius: 4px;
-            border: 1px solid #ccc;
-        }
-        div button{
-            margin-top: 30px;
-            padding: 9px 13px;
-            background: #4cae4c;
-            border:0;
-            border-color: #449d44;
-            color: #fff;
-        }
-        div button:hover{
-            background: #449d44;
-        }
-        .active{
-            background: #51a1e2 !important;
-        }
-        #profile_button{
-            cursor: pointer;
-            height: 80px;
-            width: auto;
-        }
-    </style>
+  <style>
+      *{
+          box-sizing: border-box;
+      }
+      body {
+    margin: 0;
+          padding: 0;
+          width: 100%;
+          background: #f5f5f5;
+          font-family: 'Roboto', sans-serif;
+  }
+  nav {
+          position:fixed;
+          width:100%;
+          height: 60px;
+    background-color: #222D3C;
+          color: #fff;
+          z-index: 999999999;
+  }
+  nav p {
+          margin: 0;
+          float: left;
+          height: 50px;
+          padding: 15px 15px;
+          font-size: 20px;
+          line-height: 20px;
+          font-weight: bold;
+  }
+  nav span {
+          float: right;
+          padding: .2em .6em .3em;
+          margin-top: 22px;
+          margin-left: 5px;
+          font-size: 75%;
+          line-height: 1;
+          font-weight: 700;
+          color: #fff;
+          font-size: 14px;
+          vertical-align: center;
+          border-radius: .25em;
+          vertical-align: baseline;
+  }
+  nav img {
+    float: right;
+    border-radius: 50%;
+    padding: 15px;
+      }
+  #menu {
+          position:fixed;
+          padding-top: 60px;
+          background-color: #000;
+          width: 50px;
+          height:100vh;
+          color:white;
+          box-sizing: border-box;
+          overflow:hidden;
+  }
+  .fa {
+          color: #fff;
+    font-size: 25px;
+    width: 30px;
+    margin: 6px 15px;
+    margin-left: 11px;
+    box-sizing: border-box;
+  }
+  .menu-item {
+          width: 250px;
+    cursor: pointer;
+    opacity: 0.8;
+    color: #fff;
+    font-family: sans-serif;
+    font-size: 14px;
+          padding-top: 10px;
+  }
+  .menu-item:hover {
+    border-left: 2px solid red;
+    opacity: 1;
+    background-color: #4d5866;
+  }
+      .active{
+          background: #51a1e2 !important;
+      }
+      #user_icon{
+          height:100%;
+          width: 10%;
+      }
+      #change_password_outerdiv{
+          position: absolute;
+          top: 15%;
+          left: 30%;
+          height: 320px;
+          width: 40%;
+          border: 5px solid rgba(0,0,0,0.1);
+          padding: 25px;
+          background: #fff;
+          color: #333;
+      }
+      div h1{
+          margin:0;
+          font-size: 2em;
+          margin-top: 15px;
+          font-weight: 500;
+      }
+      *{
+          box-sizing: border-box;
+      }
+      div label{
+          transform: translateY(-50%,-50%);
+          font-weight: 600;
+          display: inline-block;
+          width: 100%;
+          margin-top: 15px;
+          cursor: default;
+          box-sizing: border-box;
+      }
+      div input{
+          width:100%;
+          margin-top: 7px;
+          font-size: 1em;
+          height:30px;
+          padding:1px;
+          border-radius: 4px;
+          border: 1px solid #ccc;
+      }
+      div button{
+          margin-top: 30px;
+          padding: 9px 13px;
+          background: #4cae4c;
+          border:0;
+          border-color: #449d44;
+          color: #fff;
+      }
+      div button:hover{
+          background: #449d44;
+      }
+      #profile_button{
+          cursor: pointer;
+          padding: 0;
+          padding-left: 5px;
+          padding-top: 5px;
+          height: 60px;
+
+      }
+  </style>
 </head>
 <body>
     <% include partials/menu.html %>
@@ -168,7 +180,10 @@ var menu = document.getElementById("menu");
         div[i].classList.remove("active");
     }
 
+    if("<%=data[0].role%>" == 'admin')
     div[7].classList.add("active");
+    else
+    div[3].classList.add("active");
 
     var profile_button = document.getElementById("profile_button");
 
@@ -182,25 +197,17 @@ var menu = document.getElementById("menu");
     var change_password_button = document.getElementById('change_password_button');
     var logout_button = document.getElementById('logout_button');
 
-	sideBtn.addEventListener("click", function () {
-		if(menu.style.width == '300px') {
-            menu.style.width = '50px';
-            body_internal_div.style.marginLeft = '30%';
-            body_internal_div.style.marginTop = '2%';
-			for(var i = 0;i<span.length;i++) {
-				span[i].style.display = 'none';
-			}
-		} else {
-            menu.style.width = '300px';
-            body_internal_div.style.marginLeft = '40%';
-            body_internal_div.style.marginTop = '1.5%';
-			setTimeout(function () {
-				for(var i = 0;i<span.length;i++) {
-					span[i].style.display = 'inline';
-				}
-			}, 210);
-		}
-    })
+    $(document).ready(function(){
+        $("#sideBtn").click(function(){
+           if($("#menu").width() == 50){
+              $("#menu").animate({width: '250px'},300);
+              $("#change_password_outerdiv").animate({left:'35%'},300);
+           } else{
+              $("#menu").animate({width: '50px'},300);
+              $("#change_password_outerdiv").animate({left:'30%'},300);
+           }
+        });
+     });
 
     profile_button.addEventListener("click",function(event){
         window.location = '/profile'
@@ -232,6 +239,10 @@ var menu = document.getElementById("menu");
         var email = 'adhish@gmail.com';
         var oldPassword = document.getElementById('oldPassword').value;
         var newPassword = document.getElementById('newPassword').value;
+        if(oldPassword == "" || newPassword ==""){
+            alert("Fields Cannot be Empty !!!");
+            return;
+        }
         var password = new Object();
         password._id = '<%= data[0]._id%>';
         password.oldPassword = oldPassword;
@@ -242,7 +253,7 @@ var menu = document.getElementById("menu");
         request.send(JSON.stringify(password));
         request.onload = function(){
             var dataReturned = request.responseText;
-            if(dataReturned == ""){
+            if(dataReturned == "" || dataReturned == null){
                 alert('You entered wrong old password');
             }
             else {
