--- a/views/communitylist.ejs
+++ b/views/communitylist.ejs
@@ -22,162 +22,164 @@
         } );
     </script>
     <style>
-        *{
+      *{
+        box-sizing: border-box;
+      }
+      body{
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        background: #f5f5f5;
+        font-family: 'Roboto', sans-serif;
+  }
+  nav{
+          position: absolute;
+          width:100%;
+          height: 60px;
+    background-color: #222D3C;
+          color: #fff;
+  }
+  nav p {
+    margin: 0;
+          float: left;
+          height: 50px;
+          padding: 15px 15px;
+          font-size: 20px;
+          line-height: 20px;
+          font-weight: bold;
+  }
+  nav span {
+          float: right;
+          padding: .2em .6em .3em;
+          margin-top: 22px;
+          margin-left: 5px;
+          font-size: 75%;
+          line-height: 1;
+          font-weight: 700;
+          color: #fff;
+          font-size: 14px;
+          vertical-align: center;
+          border-radius: .25em;
+          vertical-align: baseline;
+  }
+  nav img {
+    float: right;
+    border-radius: 50%;
+    padding: 15px;
+      }
+  #menu {
+          padding-top: 60px;
+          background-color: #000;
+          width: 50px;
+          height:100vh;
+          color:white;
           box-sizing: border-box;
-        }
-        body{
-          margin: 0;
-          padding: 0;
-          width: 100%;
-          background: #f5f5f5;
-          font-family: 'Roboto', sans-serif;
-		}
-		nav{
-            position: absolute;
-            width:100%;
-            height: 60px;
-			background-color: #222D3C;
-            color: #fff;
-		}
-		nav p {
-			margin: 0;
-            float: left;
-            height: 50px;
-            padding: 15px 15px;
-            font-size: 20px;
-            line-height: 20px;
-            font-weight: bold;
-		}
-		nav span {
-            float: right;
-            padding: .2em .6em .3em;
-            margin-top: 22px;
-            margin-left: 5px;
-            font-size: 75%;
-            line-height: 1;
-            font-weight: 700;
-            color: #fff;
-            font-size: 14px;
-            vertical-align: center;
-            border-radius: .25em;
-            vertical-align: baseline;
-		}
-		nav img {
-			float: right;
-			border-radius: 50%;
-			padding: 15px;
-        }
-		#menu {
-            padding-top: 60px;
-            background-color: #000;
-            width: 50px;
-            height:100vh;
-            color:white;
-            box-sizing: border-box;
-            overflow:hidden;
-		}
-		.fa {
-			color: #fff;
-			font-size: 25px;
-			width: 30px;
-			margin: 6px 15px;
-			margin-left: 11px;
-			box-sizing: border-box;
-		}
-		.menu-item {
-            width: 250px;
-			cursor: pointer;
-			opacity: 0.8;
-			color: #fff;
-			font-family: sans-serif;
-			font-size: 14px;
-            padding-top: 10px;
-		}
-		.menu-item:hover {
-			border-left: 2px solid red;
-			opacity: 1;
-			background-color: #4d5866;
-		}
-        #user_icon{
-            height:100%;
-            width: 10%;
-        }
-        .active{
-            background: #51a1e2 !important;
-        }
-        #profile_button{
-            cursor: pointer;
-            height: 75px;
-            width: auto;
-        }
-        #body_div{
-			position:absolute;
-			left:50px;
-			right:0;
-			top:70px;
-			bottom:0;
-			margin-left: 1%;
-			overflow:auto;
-        }
-        table{
-            min-width: 50%;
-            width: auto;
-            height: 500px;
-        }
-        #tag {
-			width: 100px;
-			background-color: #2D312C;
-			color: #fff;
-			text-align: center;
-			padding: 6px;
-			border-radius: 4px;
-			box-shadow: 1px 1px 1px #2D312C, -1px -1px 1px #2D312C;
-		}
-		#refresh {
-			background-color: #2D312C;
-			width: 100px;
-			font-size: 18px;
-			padding: 6px;
-			text-align: center;
-			float: right;
-			cursor: pointer;
-		}
-		#head-btns {
-			padding-top: 5px;
-		}
-		#filter {
-			width: 150px;
-			background-color: #2D312C;
-			color: white;
-			height: 35px;
-			border-radius: 5px;
-			padding-left: 10px;
-			margin-right: 10px;
-			float: right;
-		}
-		#role {
-			background-color: #2D312C;
-			width: 200px;
-			color: white;
-			height: 35px;
-			padding-left: 10px;
-			border-radius: 5px;
-			float: right;
-		}
-		.actions-btn {
-			width: 35px;
-			height: 35px;
-			margin: 5px 5px 0;
-			padding: 5px;
-		}
-		.actions-btn span {
-			color: #fff;
-			font-size: 15px;
-			width: auto;
-			margin: 0;
-			box-sizing: initial;
-		}
-    </style>
+          overflow:hidden;
+  }
+  .fa {
+    color: #fff;
+    font-size: 25px;
+    width: 30px;
+    margin: 6px 15px;
+    margin-left: 11px;
+    box-sizing: border-box;
+  }
+  .menu-item {
+          width: 250px;
+    cursor: pointer;
+    opacity: 0.8;
+    color: #fff;
+    font-family: sans-serif;
+    font-size: 14px;
+          padding-top: 10px;
+  }
+  .menu-item:hover {
+    border-left: 2px solid red;
+    opacity: 1;
+    background-color: #4d5866;
+  }
+      #user_icon{
+          height:100%;
+          width: 10%;
+      }
+      .active{
+          background: #51a1e2 !important;
+      }
+      #profile_button{
+          cursor: pointer;
+          padding: 0px;
+          padding-left: 5px;
+          padding-top: 5px;
+          height: 60px;
+      }
+      #body_div{
+    position:absolute;
+    left:50px;
+    right:0;
+    top:64px;
+    bottom:0;
+    margin-left: 0.5%;
+    overflow:auto;
+      }
+      table{
+          min-width: 50%;
+          width: auto;
+          border: 1px solid rgb(201, 201, 201);
+      }
+      #tag {
+    width: 100px;
+    background-color: #2D312C;
+    color: #fff;
+    text-align: center;
+    padding: 6px;
+    border-radius: 4px;
+    box-shadow: 1px 1px 1px #2D312C, -1px -1px 1px #2D312C;
+  }
+  #refresh {
+    background-color: #2D312C;
+    width: 100px;
+    font-size: 18px;
+    padding: 6px;
+    text-align: center;
+    float: right;
+    cursor: pointer;
+  }
+  #head-btns {
+    padding-top: 5px;
+  }
+  #filter {
+    width: 150px;
+    background-color: #2D312C;
+    color: white;
+    height: 35px;
+    border-radius: 5px;
+    padding-left: 10px;
+    margin-right: 10px;
+    float: right;
+  }
+  #role {
+    background-color: #2D312C;
+    width: 200px;
+    color: white;
+    height: 35px;
+    padding-left: 10px;
+    border-radius: 5px;
+    float: right;
+  }
+  .actions-btn {
+    width: 35px;
+    height: 35px;
+    margin: 5px 5px 0;
+    padding: 5px;
+  }
+  .actions-btn span {
+    color: #fff;
+    font-size: 15px;
+    width: auto;
+    margin: 0;
+    box-sizing: initial;
+  }
+  </style>
   </head>
   <body>
     <% include partials/menu.html %>
@@ -335,25 +337,17 @@
       var logout_button = document.getElementById('logout_button');
 
 
-  	sideBtn.addEventListener("click", function () {
-  		if(menu.style.width == '300px') {
-              menu.style.width = '50px';
-              // body_internal_div.style.marginLeft = '12%';
-              // body_internal_div.style.marginTop = '2%';
-  			for(var i = 0;i<span.length;i++) {
-  				span[i].style.display = 'none';
-  			}
-  		} else {
-              menu.style.width = '300px';
-              // body_internal_div.style.marginLeft = '4%';
-              // body_internal_div.style.marginTop = '1.5%';
-  			setTimeout(function () {
-  				for(var i = 0;i<span.length;i++) {
-  					span[i].style.display = 'inline';
-  				}
-  			}, 210);
-  		}
-      })
+      $(document).ready(function(){
+        $("#sideBtn").click(function(){
+           if($("#menu").width() == 50){
+              $("#menu").animate({width: '250px'},300);
+              $("#body_div").animate({left:'250px'},300);
+           } else{
+              $("#menu").animate({width: '50px'},300);
+              $("#body_div").animate({left:'50px'},300);
+           }
+        });
+     });
 
       profile_button.addEventListener("click",function(event){
           window.location = '/profile'
