--- a/views/editprofile.ejs
+++ b/views/editprofile.ejs
@@ -13,234 +13,227 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="//stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
        crossorigin="anonymous">
-    <style>
-        *{
-            box-sizing: border-box;
-        }
-        body {
-			margin: 0;
-            padding: 0;
-            width: 100%;
-            background: #f5f5f5;
-            font-family: 'Roboto', sans-serif;
-		}
-		nav {
-            position: fixed;
-            width:100%;
-            height: 60px;
-			background-color: #222D3C;
-            color: #fff;
-            z-index: 9999999;
-            overflow: hidden;
-		}
-		nav p {
-            margin: 0;
-            float: left;
-            height: 50px;
-            padding: 15px 15px;
-            font-size: 20px;
-            line-height: 20px;
-            font-weight: bold;
-		}
-		nav span {
-            float: right;
-            padding: .2em .6em .3em;
-            margin-top: 22px;
-            margin-left: 5px;
-            font-size: 75%;
-            line-height: 1;
-            font-weight: 700;
-            color: #fff;
-            font-size: 14px;
-            vertical-align: center;
-            border-radius: .25em;
-            vertical-align: baseline;
-		}
-		nav img {
-			float: right;
-			border-radius: 50%;
-			padding: 15px;
-        }
-		#menu {
-            position: fixed;
-            padding-top: 60px;
-            background-color: #000;
-            width: 50px;
-            height:100vh;
-            color:white;
-            box-sizing: border-box;
-            overflow:hidden;
-		}
-		.fa {
-			color: #fff;
-			font-size: 25px;
-			width: 30px;
-			margin: 6px 15px;
-			margin-left: 11px;
-			box-sizing: border-box;
-		}
-		.menu-item {
-            width: 250px;
-			cursor: pointer;
-			opacity: 0.8;
-			color: #fff;
-			font-family: sans-serif;
-			font-size: 14px;
-            padding-top: 10px;
-		}
-		.menu-item:hover {
-			border-left: 2px solid red;
-			opacity: 1;
-			background-color: #4d5866;
-		}
-        #user_icon{
-            height:100%;
-            width: 10%;
-        }
-        .active{
-            background: #51a1e2 !important;
-        }
-        #profile_button{
-            cursor: pointer;
-            height: 75px;
-            width: auto;
-        }
-        #body_internal_div{
-            background: #fff;
-            position: absolute;
-            width: 75%;
-            left: 12.5%;
-            top: 10%;
-            margin-bottom: 50px;
-            border: 1px solid #eeeeee;
-            box-shadow: 0px 1px 10px 0px rgb(201, 201, 201);
-            overflow: auto;
-            padding: 15px;
-        }
-        #profile_div{
-            padding:0;
-            margin:0;
-            margin-bottom: 15px;
-            width: 150px;
-            height: 180px;
-            border: 1px solid #bbbbbb;
-            box-shadow: 0px 1px 10px 0px rgb(210, 210, 210);
-            border-radius: 3px;
-        }
-        #profile_photo_div{
-            width: 80%;
-            display: inline-block;
-        }
-        #profile_pic{
-            height: 180px;
-            width:150px;
-        }
-        #basic_info_div{
-            width:100%;
-            padding: 8px;
-            border: 1px solid #bbbbbb;
-            border-radius: 4px;
-        }
-        #basic_info_heading{
-            padding: 0;
-            margin: 0;
-            padding: 8px 15px;
-            color: #333;
-            background-color: #e6e6e6;
-            border: 1px solid #bbbbbb;
-            border-color: rgb(170, 170, 170);
-            border-radius: 3px;
-        }
-        label{
-            margin-top: 10px;
-            display: inline-block;
-            max-width: 100%;
-            margin-bottom: 5px;
-            font-weight: 700;
-        }
-        #email_input{
-            cursor: not-allowed;
-        }
-        input,select{
-            display: block;
-            margin-bottom: 5px;
-            width: 100%;
-            height: 34px;
-            padding: 6px 12px;
-            font-size: 14px;
-            line-height: 1.42857143;
-            color: #555;
-            background-color: #fff;
-            background-image: none;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-            box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-            -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
-            -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-            transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-            background-color: #f5f5f5;
-            opacity: 1;
-        }
-        #buttons_div{
-            margin-top: 40px;
-        }
-        .buttons{
-            color: #fff;
-            display: inline-block;
-            padding: 6px 12px;
-            margin-bottom: 0;
-            font-size: 14px;
-            font-weight: 400;
-            line-height: 1.42857143;
-            text-align: center;
-            white-space: nowrap;
-            vertical-align: middle;
-            -ms-touch-action: manipulation;
-            touch-action: manipulation;
-            cursor: pointer;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
-            background-image: none;
-            border: 1px solid transparent;
-            border-radius: 4px;
-            margin-right: 8px;
-        }
-        #update_button,#cancel_button{
-            float: right;
-        }
-        #change_password_buttonn{
-            background-color: #f0ad4e;
-            border-color: #eea236;
-        }
-        #update_button{
-            color: #fff;
-            background-color: #337ab7;
-            border-color: #2e6da4;
-        }
-        #cancel_button{
-            background-color: #d9534f;
-            border-color: #d43f3a;
-        }
-        #uploadArea{
-          display: inline-block;
-          width: 100%;
-          border: 1px solid #bbbbbb;
-          box-shadow: 0px 1px 10px 0px rgb(210, 210, 210);
-          border-radius: 3px;
-          padding: 5px;
-        }
-        #exampleFormControlFile1{
-          width: auto;
-          height: auto;
-        }
-
-
-
-
-    </style>
+       <style>
+           *{
+               box-sizing: border-box;
+           }
+           body {
+   			margin: 0;
+               padding: 0;
+               width: 100%;
+               background: #f5f5f5;
+               font-family: 'Roboto', sans-serif;
+   		}
+   		nav {
+               position: fixed;
+               width:100%;
+               height: 60px;
+   			background-color: #222D3C;
+               color: #fff;
+               z-index: 9999999;
+               overflow: hidden;
+   		}
+   		nav p {
+               margin: 0;
+               float: left;
+               height: 50px;
+               padding: 15px 15px;
+               font-size: 20px;
+               line-height: 20px;
+               font-weight: bold;
+   		}
+   		nav span {
+               float: right;
+               padding: .2em .6em .3em;
+               margin-top: 22px;
+               margin-left: 5px;
+               font-size: 75%;
+               line-height: 1;
+               font-weight: 700;
+               color: #fff;
+               font-size: 14px;
+               vertical-align: center;
+               border-radius: .25em;
+               vertical-align: baseline;
+   		}
+   		nav img {
+   			float: right;
+   			border-radius: 50%;
+   			padding: 15px;
+           }
+   		#menu {
+               position: fixed;
+               padding-top: 60px;
+               background-color: #000;
+               width: 50px;
+               height:100vh;
+               color:white;
+               box-sizing: border-box;
+               overflow:hidden;
+   		}
+   		.fa {
+   			color: #fff;
+   			font-size: 25px;
+   			width: 30px;
+   			margin: 6px 15px;
+   			margin-left: 11px;
+   			box-sizing: border-box;
+   		}
+   		.menu-item {
+               width: 250px;
+   			cursor: pointer;
+   			opacity: 0.8;
+   			color: #fff;
+   			font-family: sans-serif;
+   			font-size: 14px;
+               padding-top: 10px;
+   		}
+   		.menu-item:hover {
+   			border-left: 2px solid red;
+   			opacity: 1;
+   			background-color: #4d5866;
+   		}
+           #user_icon{
+               height:100%;
+               width: 10%;
+           }
+           .active{
+               background: #51a1e2 !important;
+           }
+           #profile_button{
+               cursor: pointer;
+               padding: 0;
+               padding-left: 5px;
+               padding-top: 5px;
+               height: 60px;
+           }
+           #body_internal_div{
+               background: #fff;
+               position: absolute;
+               width: 75%;
+               left: 12.5%;
+               top: 10%;
+               margin-bottom: 50px;
+               border: 1px solid #eeeeee;
+               box-shadow: 0px 1px 10px 0px rgb(201, 201, 201);
+               overflow: auto;
+               padding: 15px;
+           }
+           #profile_div{
+               padding:0;
+               margin:0;
+               margin-bottom: 15px;
+               width: 150px;
+               border: 1px solid #bbbbbb;
+               box-shadow: 0px 1px 10px 0px rgb(210, 210, 210);
+               border-radius: 3px;
+           }
+           #profile_photo_div{
+               width: 80%;
+               display: inline-block;
+           }
+           #profile_pic{
+               height: 150px;
+               width:150px;
+           }
+           #basic_info_div{
+               width:100%;
+               padding: 8px;
+               border: 1px solid #bbbbbb;
+               border-radius: 4px;
+           }
+           #basic_info_heading{
+               padding: 0;
+               margin: 0;
+               padding: 8px 15px;
+               color: #333;
+               background-color: #e6e6e6;
+               border: 1px solid #bbbbbb;
+               border-color: rgb(170, 170, 170);
+               border-radius: 3px;
+           }
+           label{
+               margin-top: 10px;
+               display: inline-block;
+               max-width: 100%;
+               margin-bottom: 5px;
+               font-weight: 700;
+           }
+           #email_input{
+               cursor: not-allowed;
+           }
+           input,select{
+               display: block;
+               margin-bottom: 5px;
+               width: 100%;
+               height: 34px;
+               padding: 6px 12px;
+               font-size: 14px;
+               line-height: 1.42857143;
+               color: #555;
+               background-color: #fff;
+               background-image: none;
+               border: 1px solid #ccc;
+               border-radius: 4px;
+               -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+               box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+               -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+               -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+               transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+               background-color: #f5f5f5;
+               opacity: 1;
+           }
+           #buttons_div{
+               margin-top: 40px;
+           }
+           .buttons{
+               color: #fff;
+               display: inline-block;
+               padding: 6px 12px;
+               margin-bottom: 0;
+               font-size: 14px;
+               font-weight: 400;
+               line-height: 1.42857143;
+               text-align: center;
+               white-space: nowrap;
+               vertical-align: middle;
+               -ms-touch-action: manipulation;
+               touch-action: manipulation;
+               cursor: pointer;
+               -webkit-user-select: none;
+               -moz-user-select: none;
+               -ms-user-select: none;
+               user-select: none;
+               background-image: none;
+               border: 1px solid transparent;
+               border-radius: 4px;
+               margin-right: 8px;
+           }
+           #update_button,#cancel_button{
+               float: right;
+           }
+           #change_password_buttonn{
+               background-color: #f0ad4e;
+               border-color: #eea236;
+           }
+           #update_button{
+               color: #fff;
+               background-color: #337ab7;
+               border-color: #2e6da4;
+           }
+           #cancel_button{
+               background-color: #d9534f;
+               border-color: #d43f3a;
+           }
+           #uploadImage{
+               float: right;
+               margin-bottom: 20px;
+           }
+           #upload_button{
+               background:  #337ab7;
+               border: 0px;
+           }
+       </style>
 </head>
 <body>
     <% include partials/menu.html %>
@@ -349,6 +342,7 @@
    });
 
 
+
     profile_button.addEventListener("click",function(event){
         window.location = '/profile'
     })
@@ -406,35 +400,39 @@
     update_button.addEventListener('click',function(){
         console.log('I am clicked');
         var updetail = new Object();
-        updetail.image='<%=data[0].image%>';
         updetail.email = '<%= data[0].email%>';
         updetail._id = '<%= data[0]._id%>';
         updetail.name = document.getElementById('name_input').value;
         updetail.dob = document.getElementById('dob_input').value;
-        updetail.gender = document.getElementById('select_gender').value;
-        updetail.phoneno = document.getElementById('phoneno_input').value;
-        updetail.city = document.getElementById('city_input').value;
-        updetail.interest = document.getElementById('interest_input').value;
-        updetail.journey = document.getElementById('journey_input').value;
-        updetail.expectation = document.getElementById('expectation_input').value;
-        updetail.status='<%= data[0].role%>';
-        updetail.flag='1';
-        var request = new XMLHttpRequest();
-        request.open('PUT','/updateUserDetails');
-        request.setRequestHeader('Content-Type','application/json');
-        request.send(JSON.stringify(updetail));
-        request.onload = function(){
-            var dataReturned = request.responseText;
-            if(dataReturned==""||dataReturned==null){
-            alert('Error in Updating Details!!!');
-            window.location = '/profile';
-            }
-            else{
-                console.log(dataReturned);
-                alert('Data Updated correctly');
-                window.location = '/profile';
+        if(updetail.dob == ""){
+            alert("DOB is empty");
+            window.location = '/editprofile'
+        } else{
+            updetail.gender = document.getElementById('select_gender').value;
+            updetail.phoneno = document.getElementById('phoneno_input').value;
+            updetail.city = document.getElementById('city_input').value;
+            updetail.interest = document.getElementById('interest_input').value;
+            updetail.journey = document.getElementById('journey_input').value;
+            updetail.expectation = document.getElementById('expectation_input').value;
+
+            var request = new XMLHttpRequest();
+            request.open('PUT','/updateUserDetails');
+            request.setRequestHeader('Content-Type','application/json');
+            request.send(JSON.stringify(updetail));
+            request.onload = function(){
+                var dataReturned = request.responseText;
+                if(dataReturned==""||dataReturned==null){
+                alert('Error in Updating Details!!!');
+                    window.location = '/profile';
+                }
+                else{
+                    console.log(dataReturned);
+                    alert('Data Updated correctly');
+                    window.location = '/profile';
+                }
             }
         }
+
     });
 
 </script>
