--- a/views/partials/menu.html
+++ b/views/partials/menu.html
@@ -1,4 +1,3 @@
-</style>
 <nav>
     <p>cq</p>
     <img src="/uploads/<%=data[0].image%>" alt="" id="profile_button">
@@ -16,3 +15,35 @@
     <div class="menu-item" id="change_password_button"><i class="fa fa-lock"></i><span>Change Password</span></div>
     <div class="menu-item" id="logout_button"><i class="fa fa-sign-out"></i><span>Logout</span></div>
 </div>
+<script>
+
+  if("<%=data[0].role%>" == 'user'){
+          if("<%=data[0].dob%>" == ""){
+              $("#menu").css("display", "none");
+              $("#role_on_top").css("display","none");
+          }else{
+              $("#menu").css("display","block");
+              $("#role_on_top").remove();
+              $("#add_user_button_left").remove();
+              $("#user_list_button").remove();
+              $("#switch_user_button").remove();
+              $("#tag_panel_button").remove();
+          }
+          change_password_button.addEventListener('click',function(event){
+              window.location = '/changePassword';
+          });
+
+          profile_button.addEventListener("click",function(event){
+              window.location = '/profile'
+          })
+
+          profile_button_left.addEventListener("click",function(event){
+              window.location = '/profile'
+          });
+
+          community_list_button.addEventListener('click',function(){
+              // window.location = '/community/communityList';
+              alert('Hello I am community button');
+          });
+      }
+  </script>
