--- a/views/tag.ejs
+++ b/views/tag.ejs
@@ -11,189 +11,209 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-        body {
-			margin: 0;
-            padding: 0;
-            background: #f5f5f5;
-            font-family: 'Roboto', sans-serif;
-		}
-		nav {
-            width:100%;
-            height: 8vh;
-			background-color: #222D3C;
-            color: #fff;
-		}
-		nav p {
-			margin: 0;
-			font-size: 30px;
-			padding: 10px;
-			float: left;
-		}
-		nav span {
-            padding: .2em .6em .3em;
-            font-size: 75%;
-            font-weight: 500;
-            color: #fff;
-            margin-top: 2.5vh;
-            margin-left: 1vh;
-            font-size: 14px;
-            vertical-align: center;
-            border-radius: .25em;
-            float: right;
-		}
-		nav img {
-			float: right;
-			border-radius: 50%;
-			padding: 15px;
-        }
-		#menu {
-			background-color:#000;
-			width: 50px;
-			transition-property: width;
-			transition-duration: 0.7s;
-            box-sizing: border-box;
-            float: left;
-            height:92vh;
-		}
-		.fa {
-			color: #fff;
-			font-size: 25px;
-			width: 30px;
-			margin: 6px 15px;
-			margin-left: 11px;
-			box-sizing: border-box;
-		}
-		#menu span {
-			display: none;
-		}
-		.menu-item {
-			cursor: pointer;
-			opacity: 0.8;
-			color: #fff;
-			font-family: sans-serif;
-			font-size: 14px;
-		}
-		.menu-item:hover {
-			border-left: 2px solid red;
-			opacity: 1;
-			background-color: #4d5866;
-		}
-        #user_icon{
-            height:100%;
-            width: 10%;
-        }
-        .active{
-            background: #51a1e2 !important;
-        }
-        #profile_button{
-            cursor: pointer;
-            height: 50px;
-            width: auto;
-        }
-        #body_internal_div{
-            background: #fff;
-            box-sizing: border-box;
-            width: 30%;
-            padding-bottom: 1.5%;
-            box-shadow: 0 0 10px rgba(0,0,0,0.6);
-            margin-left: 32.5%;
-            margin-top: 100px;
-            box-sizing: border-box;
-            padding-left:1%;
-            padding-right: 1%;
-        }
-        #create_tag_text{
-            padding-top:25px;
-            color: #707070;
-            border-bottom: 1px solid #eee;
-            padding-bottom: 10px;
-        }
-        #input_div{
-            margin-top:4%;
-        }
-        input{
-            width: 100%;
-            padding: 6px 12px;
-            font-size: 14px;
-            line-height: 1.42857143;
-            color: #555;
-            background-color: #fff;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box;
-        }
-        h3{
-            margin:0;
-            padding:0;
-            font-size: 24px;
-        }
-        #button_div{
-            display: inline-block;
-            width: 100%;
-            margin-top: 4%;
-        }
-        #submit_button{
-            color: #fff;
-            width: inherit;
-            background-color: #337ab7;
-            border-color: #2e6da4;
-            border: 1px solid;
-            padding: 6px 12px;
-            font-size: 14px;
-            font-weight: 400;
-            text-align: center;
-            vertical-align: middle;
-            line-height: 1.42857143;
-        }
-        #submit_button:hover{
-            color: #fff;
-            background-color: #2e6da4;
-        }
-        #tags_list_div{
-            margin-top: 20px;
-            width: 100px;
-            height: 30px;
-            text-align: center;
-            margin-left:50%;
-            transform: translateX(-50%);
-        }
-        #tags_list_button{
-            color: #fff;
-            background-color: #d58512;
-            border-color: #ec971f;
-            border: 1px;
-            display: inline-block;
-            padding: 6px 12px;
-            margin-bottom: 0;
-            font-size: 14px;
-            font-weight: 400;
-            line-height: 1.42857143;
-            text-align: center;
-            white-space: nowrap;
-            vertical-align: middle;
-        }
-        #tags_list_button:hover{
-            background: #ec971f;
-        }
-    </style>
+  <style>
+      *{
+          box-sizing: border-box;
+      }
+      body{
+          margin: 0;
+          padding: 0;
+          width: 100%;
+          background: #f5f5f5;
+          font-family: 'Roboto', sans-serif;
+  }
+  nav{
+          position:fixed;
+          width:100%;
+          height: 60px;
+    background-color: #222D3C;
+          color: #fff;
+          z-index: 999999999;
+  }
+  nav p {
+          margin: 0;
+          float: left;
+          height: 50px;
+          padding: 15px 15px;
+          font-size: 20px;
+          line-height: 20px;
+          font-weight: bold;
+  }
+  nav span {
+          float: right;
+          padding: .2em .6em .3em;
+          margin-top: 22px;
+          margin-left: 5px;
+          font-size: 75%;
+          line-height: 1;
+          font-weight: 700;
+          color: #fff;
+          font-size: 14px;
+          vertical-align: center;
+          border-radius: .25em;
+          vertical-align: baseline;
+  }
+  nav img {
+          float: right;
+    border-radius: 50%;
+    padding: 15px;
+      }
+  #menu {
+          position:fixed;
+          padding-top: 60px;
+          background-color: #000;
+          width: 50px;
+          height:100vh;
+          color:white;
+          box-sizing: border-box;
+          overflow:hidden;
+  }
+  .fa {
+          color: #fff;
+    font-size: 25px;
+    width: 30px;
+    margin: 6px 15px;
+    margin-left: 11px;
+    box-sizing: border-box;
+  }
+  .menu-item {
+    width: 250px;
+    cursor: pointer;
+    opacity: 0.8;
+    color: #fff;
+    font-family: sans-serif;
+    font-size: 14px;
+          padding-top: 10px;
+  }
+  .menu-item:hover {
+    border-left: 2px solid red;
+    opacity: 1;
+    background-color: #4d5866;
+  }
+      #user_icon{
+          height:100%;
+          width: 10%;
+      }
+      .active{
+          background: #51a1e2 !important;
+      }
+      #profile_button{
+          cursor: pointer;
+          padding: 0;
+          padding-left: 5px;
+          padding-top: 5px;
+          height: 60px;
+      }
+      #body_outer_div{
+          position: absolute;
+          top: 3%;
+          width:35%;
+          left: 32.5%;
+          top: 20%;
+      }
+      #body_internal_div{
+          background: #fff;
+          box-sizing: border-box;
+          width: 100%;
+          box-shadow: 0 0 10px rgba(0,0,0,0.6);
+          box-sizing: border-box;
+          padding-left:1%;
+          padding-right: 1%;
+          padding-bottom: 4%;
+      }
+      #create_tag_text{
+          padding-top:25px;
+          color: #707070;
+          border-bottom: 1px solid #eee;
+          padding-bottom: 10px;
+      }
+      #input_div{
+          margin-top:4%;
+      }
+      input{
+          width: 100%;
+          padding: 6px 12px;
+          font-size: 14px;
+          line-height: 1.42857143;
+          color: #555;
+          background-color: #fff;
+          border: 1px solid #ccc;
+          border-radius: 4px;
+          box-sizing: border-box;
+      }
+      h2{
+          margin:0;
+          padding:0;
+      }
+      #button_div{
+          display: inline-block;
+          width: 100%;
+          margin-top: 4%;
+      }
+      #submit_tag_button{
+          color: #fff;
+          width: inherit;
+          height: 35px;
+          background-color: #337ab7;
+          border-color: #2e6da4;
+          border: 1px solid;
+          padding: 6px 12px;
+          font-size: 14px;
+          font-weight: 400;
+          text-align: center;
+          vertical-align: middle;
+          line-height: 1.42857143;
+      }
+      #submit_tag_button:hover{
+          color: #fff;
+          background-color: #2e6da4;
+      }
+      #tags_list_div{
+          margin-top: 20px;
+          width: 100px;
+          height: 30px;
+          text-align: center;
+          margin-left:50%;
+          transform: translateX(-50%);
+      }
+      #tags_list_button{
+          color: #fff;
+          background-color: #d58512;
+          border-color: #ec971f;
+          border: 1px;
+          display: inline-block;
+          padding: 6px 12px;
+          margin-bottom: 0;
+          font-size: 14px;
+          font-weight: 400;
+          line-height: 1.42857143;
+          text-align: center;
+          white-space: nowrap;
+          vertical-align: middle;
+      }
+      #tags_list_button:hover{
+          background: #ec971f;
+      }
+  </style>
 </head>
 <body>
-    <% include partials/menu.html %>
-    <div id="body_internal_div">
-        <div id='create_tag_text'>
-            <h3>Create Tag</h3>
-        </div>
-        <div id="input_div">
-            <input type="text" placeholder="Tag Name">
-        </div>
-        <div id="button_div">
-            <button id="submit_button">Submit</button>
-        </div>
-    </div>
-    <div id="tags_list_div">
-        <button id="tags_list_button">Tags List</button>
-    </div>
+  <% include partials/menu.html %>
+  <div id='body_outer_div'>
+      <div id="body_internal_div">
+          <div id='create_tag_text'>
+              <h2>Create Tag</h2>
+          </div>
+          <div id="input_div">
+              <input type="text" placeholder="Tag Name" id="create_tag_input">
+          </div>
+          <div id="button_div">
+              <button id="submit_tag_button">Submit</button>
+          </div>
+      </div>
+      <div id="tags_list_div">
+          <button id="tags_list_button">Tags List</button>
+      </div>
+  </div>
 </body>
 <script>
     var menu = document.getElementById("menu");
@@ -219,26 +239,22 @@
     var change_password_button = document.getElementById('change_password_button');
     var logout_button = document.getElementById('logout_button');
 
+    var tags_list_button = document.getElementById('tags_list_button');
+    var create_tag_input = document.getElementById('create_tag_input');
+    var submit_tag_button = document.getElementById('submit_tag_button');
 
-	sideBtn.addEventListener("click", function () {
-		if(menu.style.width == '300px') {
-            menu.style.width = '50px';
-            // body_internal_div.style.marginLeft = '12%';
-            // body_internal_div.style.marginTop = '2%';
-			for(var i = 0;i<span.length;i++) {
-				span[i].style.display = 'none';
-			}
-		} else {
-            menu.style.width = '300px';
-            // body_internal_div.style.marginLeft = '4%';
-            // body_internal_div.style.marginTop = '1.5%';
-			setTimeout(function () {
-				for(var i = 0;i<span.length;i++) {
-					span[i].style.display = 'inline';
-				}
-			}, 210);
-		}
-    })
+
+    $(document).ready(function(){
+        $("#sideBtn").click(function(){
+           if($("#menu").width() == 50){
+              $("#menu").animate({width: '250px'},300);
+              $("#body_outer_div").animate({left:'40%'},300);
+           } else{
+              $("#menu").animate({width: '50px'},300);
+              $("#body_outer_div").animate({left:'32.5%'},300);
+           }
+        });
+     });
 
     profile_button.addEventListener("click",function(event){
         window.location = '/profile'
@@ -282,6 +298,32 @@
                 }
             }
         });
+    });
+    submit_tag_button.addEventListener('click',function(){
+        var date = new Date();
+        var tagdata = new Object();
+        tagdata.name = create_tag_input.value;
+        tagdata.creationdate = date.getDate() + '/' + date.getMonth() + '/' + date.getFullYear() + ' ' + date.getHours() + ':' + date.getMinutes() + ':' + date.getSeconds();
+        tagdata.flag = 0;
+        var request = new XMLHttpRequest();
+        request.open('POST','/tag');
+        request.setRequestHeader('Content-Type','application/json');
+        request.send(JSON.stringify(tagdata));
+        request.onload = function(){
+            var dataReturned = request.responseText;
+            if(dataReturned==""||dataReturned==null){
+            alert('Error in Adding Tag!!!');
+            window.location = '/tag';
+            }
+            else{
+                console.log(dataReturned);
+                alert('Tag added correctly');
+                window.location = '/tag';
+            }
+        }
+    })
+    tags_list_button.addEventListener('click',function(){
+        window.location = '/tag/tagslist';
     });
 
 </script>
