--- a/views/userlist.ejs
+++ b/views/userlist.ejs
@@ -108,8 +108,10 @@
         }
         #profile_button{
             cursor: pointer;
-            height: 75px;
-            width: auto;
+            padding: 0;
+            padding-left: 5px;
+            padding-top: 5px;
+            height: 60px;
         }
         #body_div{
 			position:absolute;
@@ -521,7 +523,7 @@
 					emailSendBtn.addEventListener("click", function () {
 						var data = new Object({
 							to: sendTo.value,
-							from: "ridhavrm@gmail.com",
+							from: "adhishanand9@gmail.com",
 							subject: emailSubject.value,
 							html: $('#textarea').val(),
 						});
